# pacman-key.rs

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
examples/: list_keys.rs
src/: error.rs  keyring.rs  lib.rs  parse.rs  types.rs  validation.rs
tests/: integration.rs
